--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-filter==0.10.0
 django-mptt==0.7.3
 djangorestframework==3.1.2
 djangorestframework-jwt==1.5.0
+Pillow==2.8.1
 psycopg2==2.6
 PyJWT==1.3.0
 six==1.9.0
