--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ django-debug-toolbar==1.3.0
 django-extensions==1.5.5
 django-filter==0.10.0
 django-mptt==0.7.3
+django-templated-email==0.4.9
 djangorestframework==3.1.2
 djangorestframework-jwt==1.5.0
 Pillow==2.8.1
