--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ Django==1.7.8
 django-debug-toolbar==1.3.0
 django-extensions==1.5.5
 django-filter==0.10.0
+django-fsm==2.2.1
+django-fsm-admin==1.2.1
 django-mptt==0.7.3
 django-templated-email==0.4.9
 djangorestframework==3.1.2
