--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ django-extensions==1.5.5
 django-filter==0.10.0
 django-fsm==2.2.1
 django-fsm-admin==1.2.1
+django-model-utils==2.2
 django-mptt==0.7.3
 django-templated-email==0.4.9
 djangorestframework==3.1.2
