--- a/package.json
+++ b/package.json
@@ -25,7 +25,16 @@
     "angular-strap": "^2.2.4",
     "rx": "^2.5.3",
     "rx-angular": "0.0.14",
-    "angular-breadcrumb": "^0.4.0"
+    "angular-breadcrumb": "^0.4.0",
+    "lodash": "^3.9.3",
+    "angular-resource": "^1.4.0",
+    "angular-messages": "^1.4.0",
+    "angular-animate": "^1.4.0",
+    "angular-moment": "^0.10.1",
+    "restangular": "^1.5.1",
+    "angular-loading-bar": "^0.7.1",
+    "animate.css": "^3.2.5",
+    "angular-quill": "^0.1.5"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
