--- a/.gitignore
+++ b/.gitignore
@@ -89,4 +89,5 @@ frontend/coverage/
 frontend/static/gulp/
 frontend/static/fonts/
 frontend/static/assets/tz/
+frontend/static/scripts
 karma*.config.js
