--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,11 @@ django-mptt==0.7.3
 django-polymorphic==0.7.1
 django-templated-email==0.4.9
 djangorestframework==3.1.2
+djangorestframework-camel-case==0.2.0
 djangorestframework-jwt==1.5.0
 easy-thumbnails==2.2
 Pillow==2.8.1
+psutil==3.0.0
 psycopg2==2.6
 PyJWT==1.3.0
 python-dateutil==2.4.2
