--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
+amqp==1.4.6
+anyjson==0.3.3
 backports.ssl-match-hostname==3.4.0.2
+billiard==3.3.0.20
+celery==3.1.18
 certifi==2015.4.28
 Django==1.7.8
+django-celery==3.1.16
 django-debug-toolbar==1.3.0
 django-extensions==1.5.5
 django-filer==0.9.10
@@ -14,15 +19,19 @@ django-templated-email==0.4.9
 djangorestframework==3.1.2
 djangorestframework-jwt==1.5.0
 easy-thumbnails==2.2
+kombu==3.0.26
 Pillow==2.8.1
+psutil==3.0.0
 psycopg2==2.6
 PyJWT==1.3.0
 python-dateutil==2.4.2
+pytz==2015.4
 redis==2.10.3
 six==1.9.0
 sockjs-tornado==1.0.1
 sqlparse==0.1.15
 SwampDragon==0.4.2.2
+-e git+https://github.com/AddictGuild/swampdragon-auth.git@a21305f921b17e45d23479f9aba1df31c32a10b5#egg=SwampDragon_auth-origin_jwt-support
 tornado==4.2
 tornado-redis==2.4.18
 Unidecode==0.4.17
