--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ django-fsm-admin==1.2.1
 django-model-utils==2.2
 django-mptt==0.7.3
 django-polymorphic==0.7.1
+django-rest-swagger==0.3.2
 django-templated-email==0.4.9
 djangorestframework==3.1.2
 djangorestframework-jwt==1.5.0
@@ -26,6 +27,7 @@ psycopg2==2.6
 PyJWT==1.3.0
 python-dateutil==2.4.2
 pytz==2015.4
+PyYAML==3.11
 redis==2.10.3
 six==1.9.0
 sockjs-tornado==1.0.1
